--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -47,7 +47,7 @@
               </div>
           </div>
           <div id="logoVivirMejor" class="col-2" style="display: flex; justify-content: flex-start;">
-              <img class="foto" src="../img/logo_vivir_increible.svg" alt="">
+              <img class="foto" src="../img/npm install bootstrap jquery @popperjs/corelogo_vivir_increible.svg" alt="">
           </div>
       </div>
   </nav>
