--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,10 @@
 <header>
   <div id="headerOculto">
       <div id="logoGNPOculto" style="display: flex; justify-content: flex-start;">
-          <img class="foto" src="../img/logo_gnp.svg" alt="">
+          <img class="foto" src="../assets/logo_gnp.svg" alt="">
       </div>
       <div id="logoVivirMejorOculto" style="display: flex; justify-content: flex-end;">
-          <img class="foto" src="../img/logo_vivir_increible.svg" alt="">
+          <img class="foto" src="../assets/logo_vivir_increible.svg" alt="">
       </div>
   </div>
 
@@ -12,7 +12,7 @@
       <div id="contenedorNavegador" class="container-fluid">
 
           <div id="logoGNP" class="col-2" style="display: flex; justify-content: flex-end; width: 25%;">
-              <img class="foto" src="../img/logo_gnp.svg" alt="">
+              <img class="foto" src="../assets/logo_gnp.svg" alt="">
           </div>
 
           <div class="col-7" style="justify-content: center">
@@ -47,7 +47,7 @@
               </div>
           </div>
           <div id="logoVivirMejor" class="col-2" style="display: flex; justify-content: flex-start;">
-              <img class="foto" src="../img/npm install bootstrap jquery @popperjs/corelogo_vivir_increible.svg" alt="">
+              <img class="foto" src="../assets/logo_vivir_increible.svg" alt="">
           </div>
       </div>
   </nav>
@@ -66,7 +66,7 @@
                   <div class="carousel-inner">
                       <div class="carousel-item active">
                           <div>
-                              <img src="../img/financial_freedoom.png" class="d-block w-100" alt="..." style="overflow: hidden; height: 100%;">
+                              <img src="../assets/financial_freedoom.png" class="d-block w-100" alt="..." style="overflow: hidden; height: 100%;">
                               <div class="carousel-caption d-md-block cartel">
                                   <h5 class="letraCursiva">La planificación a largo plazo no es pensar en decisiones futuras, sino en el futuro de las decisiones presentes. (P. Brucker)</h5>
                               </div>
@@ -74,7 +74,7 @@
                       </div>
                       <div class="carousel-item">
                           <div>
-                              <img src="../img/family.png" class="d-block w-100" alt="...">
+                              <img src="../assets/family.png" class="d-block w-100" alt="...">
                               <div class="carousel-caption d-md-block" style="top: 0px;">
                                   <h5 style="color: #fc6c25;">Protege a los que más quieres</h5>
                                   <p style="color: black;" class="letraCursiva">Camina seguro hacia el futuro</p>
@@ -83,7 +83,7 @@
                       </div>
                       <div class="carousel-item">
                           <div>
-                              <img src="../img/SGMM.png" class="d-block w-100" alt="...">
+                              <img src="../assets/SGMM.png" class="d-block w-100" alt="...">
                               <div class="carousel-caption d-md-block cartel">
                                   <h5 style=" color: #fc6c25;">Cuida y asegura tu bienestar</h5>
                                   <p class="letraCursiva">Preparate hoy para las incertidumbres del mañana.</p>
@@ -106,7 +106,7 @@
       <section id="trayectoria" class="col-12 seccionCentral">
           <article class="col-6">
               <div id="contenedorImagenPerfil" style="width: 40%; margin: 10px;">
-                  <img src="../img/logo_gnp.svg" style="width: 100%"/>
+                  <img src="../assets/logo_gnp.svg" style="width: 100%"/>
               </div>
               <h3 style="margin: 20px; text-align: center;"> Lic. Carolina Pino | Asesora Patrimonial </h3>
           </article>
@@ -131,7 +131,7 @@
                       <div class="carousel-item active" style="text-align: center;">
                           <div class="itemA">
                               <div>
-                                  <img src="../img/Profesional.png" class="d-block w-100" alt="...">
+                                  <img src="../assets/Profesional.png" class="d-block w-100" alt="...">
                               </div>
                               <div class="itemContenedor">
                                   <h3>SEGURO PROFESIONAL</h3>
@@ -143,7 +143,7 @@
                       <div class="carousel-item" style="text-align: center;">
                           <div class="itemA">
                               <div>
-                                  <img src="../img/seguroDeVida.png" class="d-block w-100" alt="...">
+                                  <img src="../assets/seguroDeVida.png" class="d-block w-100" alt="...">
                               </div>
                               <div class="itemContenedor">
                                   <h3>SEGURO DE VIDA</h3>
@@ -155,7 +155,7 @@
                       <div class="carousel-item" style="text-align: center;">
                           <div class="itemA">
                               <div>
-                                  <img src="../img/SGMM_Servicio.png" class="d-block w-100" alt="...">
+                                  <img src="../assets/SGMM_Servicio.png" class="d-block w-100" alt="...">
                               </div>
                               <div class="itemContenedor">
                                   <h3>SEGURO DE GASTOS MÉDICOS MAYORES</h3>
@@ -167,7 +167,7 @@
                       <div class="carousel-item" style="text-align: center;">
                           <div class="itemA">
                               <div>
-                                  <img src="../img/ahorro.png" class="d-block w-100" alt="...">
+                                  <img src="../assets/ahorro.png" class="d-block w-100" alt="...">
                               </div>
                               <div class="itemContenedor">
                                   <h3>PLANES DE AHORRO</h3>
@@ -179,7 +179,7 @@
                       <div class="carousel-item" style="text-align: center;">
                           <div class="itemA">
                               <div>
-                                  <img src="../img/retiro.png" class="d-block w-100" alt="...">
+                                  <img src="../assets/retiro.png" class="d-block w-100" alt="...">
                               </div>
                               <div class="itemContenedor">
                                   <h3>RETIRO</h3>
@@ -208,14 +208,14 @@
           </div>
           <div class="contenedorBeneficios">
               <div class="tarjeta">
-                  <img src="../img/noQuiebra.png">
+                  <img src="../assets/noQuiebra.png">
                   <div class="contenedorTexto">
                       <h5>No quiebra</h5>
                       <p>Una parte de las primas de una aseguradora se guarda en un fondo denominado "Reservas Técnicas" y se utilizan para garantizar ante la ley que contamos con los recursos y respaldos para hacer frente hasta el doble de la totalidad de seguros de todos nuestros clientes. </p>
                   </div>
               </div> 
               <div class="tarjeta">
-                  <img src="../img/reasegurada.png">
+                  <img src="../assets/reasegurada.png">
                   <div class="contenedorTexto">
                       <h5>Reasegurada</h5>
                       <p>GNP pertenece a un conglomerado de empresas denominado Grupo Bal.</p>
@@ -223,7 +223,7 @@
                   </div>
               </div> 
               <div class="tarjeta">
-                  <img src="../img/inembargable.png">
+                  <img src="../assets/inembargable.png">
                   <div class="contenedorTexto">
                       <h5>Inembargable</h5>
                       <p>Durante la vigencia del contrato, un seguro es inembargable debido a que el dinero proveniente de los clientes es utilizado para cubrir las necesidades de sus homologos en nuestra red de clientes.</p>
@@ -232,7 +232,7 @@
           </div>
       </section>
 
-      <section id="contacto" class="col-12 seccion" style="display: flex; justify-content: flex-end !important; background-image: url('../img/agendarCita.jpg'); background-repeat: no-repeat; background-size: cover;">
+      <section id="contacto" class="col-12 seccion" style="display: flex; justify-content: flex-end !important; background-image: url('../assets/agendarCita.jpg'); background-repeat: no-repeat; background-size: cover;">
           <article class="col-12 col-xl-6" style="display: flex; flex-direction: column; padding: 30px;">
               <div style="text-align: center;">
                   <h2 style="color: #fc6c25; font-family:  Open Sans,sans-serif; font-weight: 600;">
