actualizacion de archivo

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -281,5 +281,5 @@
       </div>
   </div>
 </footer>
-<script src="../js/site.js"></script>
+<script src="assets/site.js"></script>
 <router-outlet></router-outlet>
