Corrección error sliders

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -127,8 +127,8 @@
       <section id="servicios" class="col-12 seccionCentral">
           <div class="col-12">
               <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-                  <div class="carousel-inner" style="display: flex; justify-content: flex-start;">
-                      <div class="carousel-item active" style="text-align: center;">
+                  <div uib-carousel interval="5000" class="carousel-inner" style="display: flex; justify-content: flex-start;">
+                      <div uib-slide class="carousel-item active" style="text-align: center;">
                           <div class="itemA">
                               <div>
                                   <img src="assets/Profesional.png" class="d-block w-100" alt="...">
