--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -13,14 +13,14 @@ html {
     min-height: 100%;
 }
 
-*, ::before, ::after {
+/**, ::before, ::after {
     box-sizing: border-box;
 }
 
 * {
     margin: 0;
     padding: 0
-}
+}*/
 
 body {
     font-family: Arial, Helvetica, sans-serif;
