--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <header>
   <div id="headerOculto">
       <div id="logoGNPOculto" style="display: flex; justify-content: flex-start;">
-          <img class="foto" src="assets/logo_gnp.svg" alt="">
+          <img class="foto" src="assets/logo_HiNi.png" alt="">
       </div>
       <div id="logoVivirMejorOculto" style="display: flex; justify-content: flex-end;">
           <img class="foto" src="assets/logo_vivir_increible.svg" alt="">
@@ -12,7 +12,7 @@
       <div id="contenedorNavegador" class="container-fluid">
 
           <div id="logoGNP" class="col-2" style="display: flex; justify-content: flex-end; width: 25%;">
-              <img class="foto" src="assets/logo_gnp.svg" alt="">
+              <img class="foto" src="assets/logo_HiNi.png" alt="">
           </div>
 
           <div class="col-7" style="justify-content: center">
@@ -106,20 +106,20 @@
       <section id="trayectoria" class="col-12 seccionCentral">
           <article class="col-6">
               <div id="contenedorImagenPerfil" style="width: 40%; margin: 10px;">
-                  <img src="assets/logo_gnp.svg" style="width: 100%"/>
+                  <img src="assets/logo_HiNi.png" style="width: 100%"/>
               </div>
               <h3 style="margin: 20px; text-align: center;"> Lic. Carolina Pino | Asesora Patrimonial </h3>
           </article>
 
           <article id="articuloTrayectoria" class="col-6">
-              <h2 style="color: #002e71;">Conoce mi trayectoria</h2>
+              <h2 class="Apartado">Conoce mi trayectoria</h2>
               <p style="margin-top: 40px; text-align: justify; line-height: 2;">Soy psicóloga de profesión, pero mi inquietud por cuidar de los míos me llevo al ramo asegurador. Soy experta en el tema de asesoria patrimonial y en conjunto encontraremos las mejores herramientas que te permitan estar protegido y preparado para el futuro. </p>
           </article>
       </section>
 
       <section id="tipoServicios" style="margin-top: 0px !important;" class="col-12 seccionCentral imagenFondo">
           <div>
-              <h2>Servicios</h2>
+              <h2 class="Apartado">Servicios</h2>
               <p>Tenemos un plan pensado y diseñado para protegerte a ti y tus intereses.</p>
           </div>
       </section>
@@ -203,7 +203,7 @@
 
       <section id="beneficios" class="col-12 seccionCentral">
           <div style="text-align: center;">
-              <h2>Beneficios</h2>
+              <h2 class="Apartado">Beneficios</h2>
               <p>Elegir el respaldo de una aseguradora contiene grandes beneficios</p>
           </div>
           <div class="contenedorBeneficios">
@@ -235,7 +235,7 @@
       <section id="contacto" class="col-12 seccion" style="display: flex; justify-content: flex-end !important; background-image: url('assets/agendarCita.jpg'); background-repeat: no-repeat; background-size: cover;">
           <article class="col-12 col-xl-6" style="display: flex; flex-direction: column; padding: 30px;">
               <div style="text-align: center;">
-                  <h2 style="color: #fc6c25; font-family:  Open Sans,sans-serif; font-weight: 600;">
+                  <h2 style="color: #FD2D73; font-family:  Open Sans,sans-serif; font-weight: 600;">
                       Agenda tu cita
                   </h2>
                   <h1 style="width: 100%; text-align: center; font-size: 20px; color: white;">
@@ -249,7 +249,7 @@
                   <input type="number" name="telefono" id="telefono" placeholder="Numero de Telefono">
                   <input type="email" name="correo" id="correo" placeholder="Correo Electrónico">
                   <textarea name="comentarios" id="comentarios" rows="8" cols="20" placeholder="Información a solicitar"></textarea>
-                  <input id="button" type="submit" class="btn btn-success" style="background-color: #fc6c25; border: 1px #fc6c25 solid;" value="Solicitar información">
+                  <input id="button" type="submit" class="btn btn-success" style="background-color: #471A76; border: 1px #471A76 solid;" value="Solicitar información">
               </form>
           </article>
       </section>
