--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -279,7 +279,7 @@ hr {
 
 .foto {
     transition: all .5s;
-    width: 28%;
+    width: 20%;
 }
 
 footer {
@@ -328,7 +328,7 @@ footer article iframe {
 
 .menuBar a span:first-child {
     display: inline-block;
-    padding: 10px;
+    padding: 1px 10px;
 }
 
 .menuBar a {
@@ -365,7 +365,7 @@ nav ul li {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-    padding: 5px 10px;
+    padding: 0px 10px;
     border-left: 2px #FD2D73 solid;
 }
 
@@ -375,8 +375,7 @@ nav ul li {
 
 #infoContacto div i {
     padding-left: 10px;
-    font-weight: 500px;
-    color: #471A76 ;
+    color: #FD2D73 ;
 }
 
 #infoContacto div p {
@@ -482,13 +481,13 @@ nav ul li {
 #form input{
     padding: 5px;
     border-radius: 5px;
-    border: 1px white;
+    border: 1px #E3D2F6 solid;
 }
 
 #form textarea{
     padding: 5px;
     border-radius: 5px;
-    border: 1px white;
+    border: 1px #E3D2F6 solid;
 }
 
 #trayectoria {
