--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,15 +10,18 @@
 
   <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark border-bottom box-shadow col-12">
       <div id="contenedorNavegador" class="container-fluid">
-
+        <div style="display: flex;">
           <div id="logoGNP" class="col-2" style="display: flex; justify-content: flex-end; width: 25%;">
-              <img class="foto" src="assets/logo_HiNi.png" alt="">
+              <img class="foto" src="assets/logo_HiNi_SinFondo.png" alt="">              
           </div>
-
+          <div style="display: flex; align-items: center;">
+            <span style="color: #471A76; font-weight: bold; padding-left: 5px;">HiNi - Grupo Patrimonial</span>
+          </div>
+        </div>
           <div class="col-7" style="justify-content: center">
               <div class="display: flex; justify-content: space-between;">
 
-                  <ul class="navbar-nav flex-grow-1 menuBar" style="display: flex; flex-direction: row; justify-content: center;">
+                  <ul class="navbar-nav flex-grow-1 menuBar" style="display: flex; flex-direction: row; justify-content: flex-end;">
 
                       <li class="nav-item">
                           <a class="nav-link" href="#servicios">
@@ -45,9 +48,6 @@
                   </ul>
 
               </div>
-          </div>
-          <div id="logoVivirMejor" class="col-2" style="display: flex; justify-content: flex-start;">
-              <img class="foto" src="assets/logo_vivir_increible.svg" alt="">
           </div>
       </div>
   </nav>
@@ -238,17 +238,21 @@
                   <h2 style="color: #FD2D73; font-family:  Open Sans,sans-serif; font-weight: 600;">
                       Agenda tu cita
                   </h2>
-                  <h1 style="width: 100%; text-align: center; font-size: 20px; color: white;">
+                  <h1 style="width: 100%; text-align: center; font-size: 20px; color: #FCACBB;">
                       ¡Platiquemos y planifiquemos tu futuro!
                   </h1>
               </div>
 
               <form id="form" class="datosContacto" style="display: flex; flex-direction: column; align-items: center; justify-content: space-evenly;">
-                  <input type="text" name="nombre" id="nombre" placeholder="Nombre(s)">
-                  <input type="text" name="apellido" id="apellido" placeholder="Apellidos">
-                  <input type="number" name="telefono" id="telefono" placeholder="Numero de Telefono">
-                  <input type="email" name="correo" id="correo" placeholder="Correo Electrónico">
-                  <textarea name="comentarios" id="comentarios" rows="8" cols="20" placeholder="Información a solicitar"></textarea>
+                <div style="display: flex; flex-direction: row;">
+                    <input type="text" name="nombre" id="nombre" placeholder="Nombre(s)">
+                    <input type="text" name="apellido" id="apellido" placeholder="Apellidos">
+                </div>    
+                <div style="display: flex; flex-direction: row;">
+                    <input type="number" name="telefono" id="telefono" placeholder="Numero de Telefono">
+                    <input type="email" name="correo" id="correo" placeholder="Correo Electrónico">
+                </div>                
+                  <textarea style="width: 66%;" name="comentarios" id="comentarios" rows="8" cols="20" placeholder="Información a solicitar"></textarea>
                   <input id="button" type="submit" class="btn btn-success" style="background-color: #471A76; border: 1px #471A76 solid;" value="Solicitar información">
               </form>
           </article>
