--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,17 +1,17 @@
 <header>
-  <div id="headerOculto">
-      <div id="logoGNPOculto" style="display: flex; justify-content: flex-start;">
-          <img class="foto" src="assets/logo_HiNi.png" alt="">
-      </div>
-      <div id="logoVivirMejorOculto" style="display: flex; justify-content: flex-end;">
-          <img class="foto" src="assets/logo_vivir_increible.svg" alt="">
-      </div>
+  <div id="contenedorLogoOculto" style="display: none;">
+        <div id="logoHiNi" class="col-2" style="display: flex; justify-content: flex-end; width: 25%;">
+            <img class="foto" src="assets/logo_HiNi_SinFondo.png" alt="">              
+        </div>
+        <div style="display: flex; align-items: center;">
+          <span style="color: #471A76; font-weight: bold; padding-left: 5px;">HiNi - Grupo Patrimonial</span>
+        </div>
   </div>
 
   <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark border-bottom box-shadow col-12">
       <div id="contenedorNavegador" class="container-fluid">
-        <div style="display: flex;">
-          <div id="logoGNP" class="col-2" style="display: flex; justify-content: flex-end; width: 25%;">
+        <div id="contenedorLogo"style="display: flex;">
+          <div id="logoHiNi" class="col-2" style="display: flex; justify-content: flex-end; width: 25%;">
               <img class="foto" src="assets/logo_HiNi_SinFondo.png" alt="">              
           </div>
           <div style="display: flex; align-items: center;">
@@ -19,7 +19,7 @@
           </div>
         </div>
           <div class="col-7" style="justify-content: center">
-              <div class="display: flex; justify-content: space-between;">
+              <div>
 
                   <ul class="navbar-nav flex-grow-1 menuBar" style="display: flex; flex-direction: row; justify-content: flex-end;">
 
