--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,57 +1,5 @@
-<header>
-  <div id="contenedorLogoOculto" style="display: none;">
-        <div id="logoHiNi" class="col-2" style="display: flex; justify-content: flex-end; width: 25%;">
-            <img class="foto" src="assets/logo_HiNi_SinFondo.png" alt="">              
-        </div>
-        <div style="display: flex; align-items: center;">
-          <span style="color: #471A76; font-weight: bold; padding-left: 5px;">HiNi - Grupo Patrimonial</span>
-        </div>
-  </div>
-
-  <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark border-bottom box-shadow col-12">
-      <div id="contenedorNavegador" class="container-fluid">
-        <div id="contenedorLogo"style="display: flex;">
-          <div id="logoHiNi" class="col-2" style="display: flex; justify-content: flex-end; width: 25%;">
-              <img class="foto" src="assets/logo_HiNi_SinFondo.png" alt="">              
-          </div>
-          <div style="display: flex; align-items: center;">
-            <span style="color: #471A76; font-weight: bold; padding-left: 5px;">HiNi - Grupo Patrimonial</span>
-          </div>
-        </div>
-          <div class="col-7" style="justify-content: center">
-              <div>
-
-                  <ul class="navbar-nav flex-grow-1 menuBar" style="display: flex; flex-direction: row; justify-content: flex-end;">
-
-                      <li class="nav-item">
-                          <a class="nav-link" href="#servicios">
-                              <span class="colorLinks">Servicios</span>
-                              <span><i class="bi bi-briefcase" style="font-size:20px; color: black;"></i></span>
-
-                          </a>
-                      </li>
-
-                      <li class="nav-item">
-                          <a class="nav-link" href="#contacto">
-                              <span class="colorLinks">Contacto</span>
-                              <span><i class="bi bi-envelope-at" style="font-size:20px; color: black;"></i></span>
-
-                          </a>
-                      </li>
-
-                      <li class="nav-item">
-                          <a class="nav-link" href="#ubicacion">
-                              <span class="colorLinks">Ubicación</span>
-                              <span><i class="bi bi-geo-alt" style="font-size:20px; color: black;"></i></span>
-                          </a>
-                      </li>
-                  </ul>
-
-              </div>
-          </div>
-      </div>
-  </nav>
-</header>
+<app-header>
+</app-header>
 
 <div class="col-12">
   <main role="main" style="display: flex; flex-wrap: wrap;">
