--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -85,7 +85,7 @@
                                     <h3>SEGURO PROFESIONAL</h3>
                                     <h6>¡Prepara y asegura el futuro educativo de los tuyos desde hoy!</h6>
                                     <p>Dale la oportunidad a los que más quieres de elegir las mejores instituciones educativas del estado sin tener que preocuparte por los pagos de colegiaturas e inscripciones.</p>
-
+                                    <button>Ver Más</button>
                                 </div>
                             </div>
                         </div>
