Modificacion apartado servicios

--- a/src/app/layouts/nav-menu/nav-menu.component.html
+++ b/src/app/layouts/nav-menu/nav-menu.component.html
@@ -3,7 +3,7 @@
         <div>
             <ul class="navbar-nav flex-grow-1 menuBar" style="display: flex; flex-direction: row; justify-content: flex-end;">
                 <li class="nav-item">
-                    <a class="nav-link" href="#servicios">
+                    <a class="nav-link" href="#tipoServicios">
                         <span class="colorLinks">Servicios</span>
                         <span><i class="bi bi-briefcase" style="font-size:20px; color: black;"></i></span>
                     </a>
