--- a/src/app/pages/main-information/main-information.component.html
+++ b/src/app/pages/main-information/main-information.component.html
@@ -62,11 +62,11 @@
             </article>
         </section>
 
-        <section id="tipoServicios" style="margin-top: 0px !important;" class="col-12 seccionCentral imagenFondo">
-            <div>
+        <section id="tipoServicios" class="imagenFondo">
+            <div class="apartadoServicios">
                 <h1 class="Apartado">Servicios</h1>
                 <p>Tenemos un plan pensado y diseñado para protegerte a ti y tus intereses.</p>
-            </div>
+            </div> 
         </section>
 
         <section id="servicios" class="col-12 seccionCentral">
@@ -148,9 +148,9 @@
         </section>
 
         <section id="beneficios" class="col-12 seccionCentral">
-            <div style="text-align: center;">
+            <div style="text-align: center; margin-bottom: 20px;">
                 <h1 class="Apartado">Beneficios</h1>
-                <p>Elegir el respaldo de una aseguradora contiene grandes beneficios</p>
+                <h4 style="color:#471A76">Elegir el respaldo de una aseguradora contiene grandes beneficios</h4>
             </div>
             <div class="contenedorBeneficios">
                 <div class="tarjeta">
