--- a/src/app/pages/main-information/main-information.component.css
+++ b/src/app/pages/main-information/main-information.component.css
@@ -332,6 +332,7 @@ hr {
     border: #FD2D73 1px solid;
     color: white;
     padding: 5px;
+    display: none;
 }
 
 .itemContenedor {
@@ -344,8 +345,8 @@ hr {
 }
 
 .seccionCentral{
-    margin-top: 30px;
-    margin-bottom: 30px;
+    margin-top: 60px;
+    margin-bottom: 60px;
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
@@ -371,7 +372,6 @@ hr {
 #trayectoria {
     display: flex;
     flex-direction: row;
-    margin-bottom: 0px;
 }
 
 #trayectoria article{
@@ -389,27 +389,39 @@ hr {
 }
 
 #tipoServicios{
-    height: 400px;
-}
-
-#tipoServicios div{
-    width: 60%;
-    height: 45%;
-    text-align: center;
-    display: flex;
-    justify-content: center;
-    align-content: stretch;
-    align-items: center;
-    flex-direction: column; background-color: rgba(0, 0, 0, .5); color: white; 
-    border-radius: 30px 15px;
+    height: 500px;
+    width: 100%;
+    margin-bottom: 30px;
 }
 
 .imagenFondo{
-    background-image: url("/assets/tipoServicios.png"); 
+    background-image: url("/assets/tipoServicios3.png"); 
     background-attachment: fixed;
     background-repeat: no-repeat;
     background-size: contain;
     background-position: center;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.apartadoServicios{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    z-index: 10;
+    background-color: rgba(0, 0, 0, .6);
+    width: 50%;
+    height: 50%;
+}
+
+.apartadoServicios p{
+    font-size: 18px;
 }
 
 .tarjeta{
