--- a/src/app/layouts/footer/footer.component.css
+++ b/src/app/layouts/footer/footer.component.css
@@ -2,28 +2,27 @@
 footer {
     display: flex;
     flex-direction: row;
+    align-items: center;
+    background-color: black;
 }
 
 footer article {
     display: flex;
-    justify-content: center;
     flex-direction: column;
-    background-color: #191919;
     justify-content: space-evenly;
-    align-items: flex-start;
-}
-
-.mapa {
-    background-color: #191919;
+    width: 49%;
+    padding-top: 20px;
+    padding-bottom: 20px;
 }
 
 footer article iframe {
-    width: 100%;
+    width: 80%;
     height: 200px;
 }
 
-#infoContacto div {
+#infoContacto div{
     display: flex;
+    justify-content: center;
 }
 
 #infoContacto div i {
@@ -37,8 +36,17 @@ footer article iframe {
 }
 
 @media screen and (max-width: 800px) {
-    #ubicacion article div{
+    footer{
         flex-direction: column;
+        padding-top: 10px;
+    }
+
+    footer article{
+        width: 80%;
+    }
+
+    footer article iframe {
+        width: 100%;
     }
     
     footer article div p{
