Actualización de assetes
Se actualizaron las imágenes a un formato más aceptado por google

--- a/src/app/pages/main-information/main-information.component.css
+++ b/src/app/pages/main-information/main-information.component.css
@@ -395,7 +395,7 @@ hr {
 }
 
 .imagenFondo{
-    background-image: url("/assets/tipoServicios3.png"); 
+    background-image: url("/assets/tipoServicios3.webp"); 
     background-attachment: fixed;
     background-repeat: no-repeat;
     background-size: contain;
