--- a/src/app/layouts/header/header.component.html
+++ b/src/app/layouts/header/header.component.html
@@ -13,7 +13,7 @@
         <div id="contenedorLogo" style="display: flex;">
             <div id="logoHiNi" style="display: flex; align-items: center;">
                 <div class="col-2" style="display: flex; justify-content: flex-end;">
-                    <img class="foto" src="assets/logo_HiNi_SinFondo.png" alt="">
+                    <img class="foto" src="assets/logo_HiNi_SinFondo.webp" alt="">
                 </div>
                 <div style="display: flex; align-items: center;">
                     <span style="color: #471A76; font-weight: bold; padding-left: 5px;">HiNi - Grupo Patrimonial</span>
