--- a/src/app/pages/main-information/main-information.component.html
+++ b/src/app/pages/main-information/main-information.component.html
@@ -11,7 +11,7 @@
                     <div class="carousel-inner">
                         <div class="carousel-item active">
                             <div>
-                                <img src="assets/financial_freedoom.png" class="d-block w-100" alt="..." style="overflow: hidden; height: 100%;">
+                                <img src="assets/financial_freedoom.webp" class="d-block w-100" alt="..." style="overflow: hidden; height: 100%;">
                                 <div class="carousel-caption d-md-block cartel">
                                     <h5 class="letraCursiva">La planificación a largo plazo no es pensar en decisiones futuras, sino en el futuro de las decisiones presentes. (P. Brucker)</h5>
                                 </div>
@@ -19,7 +19,7 @@
                         </div>
                         <div class="carousel-item">
                             <div>
-                                <img src="assets/family.png" class="d-block w-100" alt="...">
+                                <img src="assets/family.webp" class="d-block w-100" alt="...">
                                 <div class="carousel-caption d-md-block cartel">
                                     <h5 style="color: #FD2D73;">Protege a los que más quieres</h5>
                                     <p class="letraCursiva">Camina seguro hacia el futuro</p>
@@ -28,7 +28,7 @@
                         </div>
                         <div class="carousel-item">
                             <div>
-                                <img src="assets/SGMM.png" class="d-block w-100" alt="...">
+                                <img src="assets/SGMM.webp" class="d-block w-100" alt="...">
                                 <div class="carousel-caption d-md-block cartel">
                                     <h5 style=" color: #FD2D73;">Cuida y asegura tu bienestar</h5>
                                     <p class="letraCursiva">Preparate hoy para las incertidumbres del mañana.</p>
@@ -51,7 +51,7 @@
         <section id="trayectoria" class="col-12 seccionCentral">
             <article class="col-6">
                 <div id="contenedorImagenPerfil" style="width: 40%; margin: 10px;">
-                    <img src="assets/logo_HiNi.png" style="width: 100%"/>
+                    <img src="assets/logo_HiNi.webp" style="width: 100%"/>
                 </div>
                 <h3 style="margin: 20px; text-align: center;"> Lic. Carolina Pino | Asesora Patrimonial </h3>
             </article>
@@ -76,7 +76,7 @@
                         <div uib-slide class="carousel-item active" style="text-align: center;">
                             <div class="itemA">
                                 <div>
-                                    <img src="assets/Profesional.png" class="d-block w-100" alt="...">
+                                    <img src="assets/Profesional.webp" class="d-block w-100" alt="...">
                                 </div>
                                 <div class="itemContenedor">
                                     <h3>SEGURO PROFESIONAL</h3>
@@ -89,7 +89,7 @@
                         <div class="carousel-item" style="text-align: center;">
                             <div class="itemA">
                                 <div>
-                                    <img src="assets/seguroDeVida.png" class="d-block w-100" alt="...">
+                                    <img src="assets/seguroDeVida.webp" class="d-block w-100" alt="...">
                                 </div>
                                 <div class="itemContenedor">
                                     <h3>SEGURO DE VIDA</h3>
@@ -101,7 +101,7 @@
                         <div class="carousel-item" style="text-align: center;">
                             <div class="itemA">
                                 <div>
-                                    <img src="assets/SGMM_Servicio.png" class="d-block w-100" alt="...">
+                                    <img src="assets/SGMM_Servicio.webp" class="d-block w-100" alt="...">
                                 </div>
                                 <div class="itemContenedor">
                                     <h3>SEGURO DE GASTOS MÉDICOS MAYORES</h3>
@@ -113,7 +113,7 @@
                         <div class="carousel-item" style="text-align: center;">
                             <div class="itemA">
                                 <div>
-                                    <img src="assets/ahorro.png" class="d-block w-100" alt="...">
+                                    <img src="assets/ahorro.webp" class="d-block w-100" alt="...">
                                 </div>
                                 <div class="itemContenedor">
                                     <h3>PLANES DE AHORRO</h3>
@@ -125,7 +125,7 @@
                         <div class="carousel-item" style="text-align: center;">
                             <div class="itemA">
                                 <div>
-                                    <img src="assets/retiro.png" class="d-block w-100" alt="...">
+                                    <img src="assets/retiro.webp" class="d-block w-100" alt="...">
                                 </div>
                                 <div class="itemContenedor">
                                     <h3>RETIRO</h3>
@@ -154,7 +154,7 @@
             </div>
             <div class="contenedorBeneficios">
                 <div class="tarjeta">
-                    <img src="assets/Fondo_info_HiNi.jpg">
+                    <img src="assets/Fondo_info_HiNi.webp">
                     <div class="contenedorTexto">
                         <h5>No quiebra</h5>
                     </div>
@@ -163,7 +163,7 @@
                     </div>
                 </div> 
                 <div class="tarjeta">
-                    <img src="assets/Fondo_info_HiNi.jpg">
+                    <img src="assets/Fondo_info_HiNi.webp">
                     <div class="contenedorTexto">
                         <h5>Reasegurada</h5>
                     </div>
@@ -172,7 +172,7 @@
                     </div>
                 </div> 
                 <div class="tarjeta">
-                    <img src="assets/Fondo_info_HiNi.jpg">
+                    <img src="assets/Fondo_info_HiNi.webp">
                     <div class="contenedorTexto">
                         <h5>Inembargable</h5>
                     </div>
@@ -183,7 +183,7 @@
             </div>
         </section>
 
-        <section id="contacto" class="col-12 seccion" style="display: flex; justify-content: flex-end !important; background-image: url('assets/agendarCita.jpg'); background-repeat: no-repeat; background-size: cover;">
+        <section id="contacto" class="col-12 seccion" style="display: flex; justify-content: flex-end !important; background-image: url('assets/agendarCita.webp'); background-repeat: no-repeat; background-size: cover;">
             <article class="col-12 col-xl-6" style="display: flex; flex-direction: column; padding: 30px;">
                 <div style="text-align: center;">
                     <h2 style="color: #FD2D73; font-family:  Open Sans,sans-serif; font-weight: 600;">
