Actualización de velocidad de carga

--- a/src/app/layouts/header/header.component.html
+++ b/src/app/layouts/header/header.component.html
@@ -2,7 +2,7 @@
     <div id="contenedorLogoOculto" style="display: none;">
         <div id="contenedorLogoOcultoDiv" style="display: flex; align-items: center;">
             <div id="logoHiNi" class="col-2" style="display: flex; justify-content: flex-end;">
-                <img class="foto" src="assets/logo_HiNi_SinFondo.png" alt="">
+                <img class="foto" src="assets/logo_HiNi_SinFondo.webp" alt="">
             </div>
             <div style="display: flex; align-items: center;">
                 <span style="color: #471A76; font-weight: bold; padding-left: 5px;">HiNi - Grupo Patrimonial</span>
