--- a/src/app/pages/main-information/main-information.component.html
+++ b/src/app/pages/main-information/main-information.component.html
@@ -11,7 +11,7 @@
                     <div class="carousel-inner">
                         <div class="carousel-item active">
                             <div>
-                                <img src="assets/financial_freedoom.webp" class="d-block w-100" alt="..." style="overflow: hidden; height: 100%;">
+                                <img rel="preload" src="assets/financial_freedoom.webp" class="d-block w-100" alt="..." style="overflow: hidden; height: 100%;">
                                 <div class="carousel-caption d-md-block cartel">
                                     <h5 class="letraCursiva">La planificación a largo plazo no es pensar en decisiones futuras, sino en el futuro de las decisiones presentes. (P. Brucker)</h5>
                                 </div>
